# omniTAK-mobile

./: .gitignore  ANDROID_BUILD_SETUP.md  BUILD_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  FEATURE_COMPARISON.md  IOS_BUILD_SETUP.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  README.md
.github/: FUNDING.yml
apps/omnitak/: ANALYSIS_SUMMARY.txt  EASY_TAK_CONNECTION_UX.md  PROJECT_ANALYSIS_README.md  PROJECT_REBUILDER_INDEX.md  QUICK_START.md  REBUILD_PROJECT_README.md  REBUILD_SUMMARY.md  REORGANIZE_GUIDE.md  SIMPLE_CONNECTION_GUIDE.md  TLS_LEGACY_SUPPORT.md  add_file.rb  add_files_to_xcode.py  add_xcframework.rb  auto_reorganize.rb  auto_reorganize_v2.rb  clean_and_remove_p12.rb  fix_p12_reference.rb  group_structure.example.json  group_structure.json  parse_pbxproj.py  project_analysis.example.json  project_analysis.json  rebuild_project.py  remove_p12_refs.rb  reorganize_features.rb  reorganize_features_correct.rb  reorganize_features_fixed.rb  reorganize_project.py  reorganize_simple.rb  reorganize_xcode.py  reorganize_xcode_clean.rb  reorganize_xcode_project.rb  resize_screenshots.py  setup_xcode.sh  validate_input_files.py
apps/omnitak/OmniTAKMobile/: ATAKToolsView.swift  BloodhoundView.swift  CHAT_FEATURE_README.md  CHAT_FILES_INDEX.md  CHAT_IMPLEMENTATION_SUMMARY.md  COORDINATION_STATUS.md  CertificateEnrollmentService.swift  CertificateEnrollmentView.swift  CertificateManagementView.swift  ConnectionStatusWidget.swift  CoordinateDisplayView.swift  ENHANCED_MARKERS_INTEGRATION.md  FILTER_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MAPVIEWCONTROLLER_CHANGES.md  MapContextMenus.swift  MapStateManager.swift  MapViewController.swift  MapViewController_FilterIntegration.swift  MarkerAnnotationView.swift  MeshTopologyView.swift  MeshtasticConnectionView.swift  MeshtasticDevicePickerView.swift  MeshtasticManager.swift  MultiServerFederation.swift  NavigationDrawer.swift  NavigationService.swift  POINT_DROPPER_INTEGRATION.md  PointDropperService.swift  PointDropperView.swift  QUICK_INTEGRATION.md  QuickActionToolbar.swift  RadialMenuPresets.swift  ServerManager.swift  SettingsView.swift  SignalHistoryView.swift  TAKService.swift  UI_LAYOUT_REFERENCE.md  WAYPOINT_NAVIGATION_IMPLEMENTATION.md  WAYPOINT_SYSTEM_SUMMARY.md  (+1 more)
apps/omnitak/OmniTAKMobile.xcframework/ios-arm64/Headers/: build_android.sh  build_ios.sh
apps/omnitak/OmniTAKMobile.xcframework/ios-arm64_x86_64-simulator/Headers/src/: error.rs
apps/omnitak/OmniTAKMobile.xcodeproj/: project.pbxproj  project.pbxproj.backup  project.pbxproj.reorganize_backup
apps/omnitak/OmniTAKMobile.xcodeproj.backup/OmniTAKMobile.xcodeproj/: project.pbxproj.bak
apps/omnitak/OmniTAKMobile/Map/Controllers/: IntegratedMapView.swift  MapOverlayCoordinator.swift  MapViewController.swift
apps/omnitak/OmniTAKMobile/OmniTAKMobile 2025-11-13 22-21-12/: DistributionSummary.plist  ExportOptions.plist  OmniTAKMobile.ipa
apps/omnitak/OmniTAKMobile/Resources/: Info.plist
apps/omnitak/OmniTAKMobile/UI/Components/: QuickActionToolbar.swift
apps/omnitak/OmniTAKMobile/Views/: ATAKLoadingScreen.swift  ATAKToolsView.swift  AboutView.swift  CertificateEnrollmentView.swift  CoordinateDisplayView.swift  ScaleBarView.swift
apps/omnitak_android/src/valdi/omnitak_app/: BUILD.bazel  module.yaml
apps/omnitak_ios_test/: README.md
apps/omnitak_ios_test/OmniTAKMobile.xcframework/: Info.plist
apps/omnitak_ios_test/OmniTAKMobile.xcframework/ios-arm64/Headers/: README.md
apps/omnitak_ios_test/OmniTAKMobile.xcframework/ios-arm64_x86_64-simulator/Headers/: Cargo.toml  omnitak_mobile.h
apps/omnitak_ios_test/OmniTAKMobile.xcframework/ios-arm64_x86_64-simulator/Headers/src/: callbacks.rs  connection.rs  lib.rs
apps/omnitak_ios_test/OmniTAKTest/: ATAKLoadingScreen.swift  ContentView.swift  Info.plist  MapViewController.swift  MultiServerFederation.swift  NavigationDrawer.swift  OmniTAKTestApp.swift  TAKService.swift
apps/omnitak_ios_test/OmniTAKTest.xcodeproj/: project.pbxproj
apps/omnitak_mobile_ios/: SETUP_SUMMARY.md
bzl/valdi/: valdi_module.bzl
crates/: Cargo.toml  README.md  build_ios.sh
crates/omnitak-cert/: Cargo.toml
crates/omnitak-cert/src/: lib.rs
crates/omnitak-client/: Cargo.toml
crates/omnitak-client/src/: lib.rs
crates/omnitak-core/: Cargo.toml
crates/omnitak-core/src/: lib.rs
crates/omnitak-cot/: Cargo.toml
crates/omnitak-cot/src/: lib.rs
crates/omnitak-meshtastic/: Cargo.toml  build.rs
crates/omnitak-meshtastic/proto/: meshtastic.proto
crates/omnitak-meshtastic/src/: lib.rs
crates/omnitak-mobile/: Cargo.toml
crates/omnitak-mobile/include/: omnitak_mobile.h
crates/omnitak-mobile/src/: callbacks.rs  connection.rs  lib.rs
crates/omnitak-server/: Cargo.toml  README.md
crates/omnitak-server/examples/: server.rs  test_client.rs  two_clients.rs
crates/omnitak-server/src/: client.rs  config.rs  error.rs  lib.rs  marti.rs  router.rs  server.rs
docs/: LOCAL_DEVELOPMENT_SETUP.md  MESHTASTIC_INTEGRATION.md  MESHTASTIC_UI_UX_GUIDE.md  PLUGIN_ARCHITECTURE.md
docs/api/: api-quick-reference.md  api-style-attributes.md
docs/codelabs/advanced_ui/: 1-setup.md
docs/docs/: core-flexbox.md  native-bindings.md  performance-optimization.md  start-about.md  stdlib-coreutils.md  stdlib-filesystem.md  stdlib-http.md  stdlib-persistence.md
modules/omnitak_mobile/: ATAK_MENU_IMPLEMENTATION.md  BAZEL_BUILD_SUMMARY.md  BAZEL_SETUP_COMPLETE.md  BUILD.bazel  BUILD_CHECKLIST.md  BUILD_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MAPLIBRE_IMPLEMENTATION_SUMMARY.md  MULTI_SERVER_FEDERATION.md  POLYGLOT_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md
modules/omnitak_mobile/ios/maplibre/: IMPLEMENTATION_SUMMARY.md  SCMapLibreMapView.m
modules/omnitak_mobile/ios/native/: MeshtasticBridge.swift
website/: DEPLOYMENT.md  tailwind.config.ts
website/app/: globals.css
website/components/: Changelog.tsx  Download.tsx  FeatureCard.tsx  FloatingParticles.tsx  Footer.tsx  GlassCard.tsx  Hero.tsx  Navigation.tsx  TechStack.tsx  UseCases.tsx
(+44 files in other folders)
