[package]
name = "omnitak-cot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
omnitak-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
