[package]
name = "omnitak-meshtastic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
omnitak-core = { workspace = true }
omnitak-cot = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-serial = { workspace = true }

bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

parking_lot = { workspace = true }

# Protobuf support
prost = { workspace = true }
prost-types = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Encoding
base64 = { workspace = true }
hex = { workspace = true }

[build-dependencies]
prost-build = "0.12"
