[package]
name = "omnitak-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal crates
omnitak-core = { workspace = true }
omnitak-cot = { workspace = true }
omnitak-cert = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# TLS
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Networking
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# HTTP server for Marti API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "server"
path = "examples/server.rs"
